PS-5485 : exposing undo log tablespace encryption status through innodb_tablespaces PS-5490 : enabling temp-tablespace encryption doesn't mark innodb_temporary tablespace encryption flag

Problem:
--------
When temporary tablespace and undo tablespaces are encrypted, I_S views does not show proper status
in "encryption" column output.

Fix:
----
We will use cached tablespace flags to retreive encryption status.
When upstream fix for Bug#94665 arrives, remove the fsp_is_undo_tablespace() check introduced
in this patch.